--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "framer-motion": "^10.12.12",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "sass": "^1.62.1",
     "typescript": "5.0.4",
     "usehooks-ts": "^2.9.1"
