--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,26 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@types/node": "20.1.2",
+    "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "axios": "^1.4.0",
-    "classnames": "^2.3.2",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "framer-motion": "^10.12.12",
-    "next": "13.4.1",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
+    "next": "13.4.3",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "sass": "^1.62.1",
-    "typescript": "5.0.4",
-    "usehooks-ts": "^2.9.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   }
 }
